Add; Graph with status count

--- a/playground/TwitterGraph2.ipynb
+++ b/playground/TwitterGraph2.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import tweepy\n",
@@ -16,8 +18,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "consumer_key = \"2e6dNamYAUwvPcLJ5YKn9ow6R\"\n",
@@ -32,8 +36,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "res = api.get_user('MakeItAllWork')"
@@ -42,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "followers = []\n",
@@ -60,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "friends = []"
@@ -92,7 +102,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_network(filename, G2=None):\n",
@@ -150,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "with open(\"friendGraph.json\", 'w') as file:\n",
@@ -159,8 +173,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(\"friendGraph.json\", 'r') as file:\n",
+    "    json_data = file.read()\n",
+    "    data2 = json.loads(json_data)\n",
+    "G = json_graph.node_link_graph(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NodeView(('957137135785607168', '23994503', '743856512', '3100117052', '39099783', '2887131725', '804464317592547328', '799350189932675072', '9860432', '3278180064', '886362667061039105', '89829880', '37320030', '31622212', '20643704', '15961241', '147494798', '707175879491915776', '4843180262', '241240768', '58027303', '2446203199', '1317152466', '444909293', '2391206671', '2453418120', '4060832015', '14499004', '41352598', '384569862', '119051756', '512710201', '715324052756238336', '178203295', '3415329345', '3744250757', '32219625', '45269939', '75942425', '2207327185', '344960464', '17679150', '14277681', '941784037886017536', '11791512', '263547393', '24387293', '19733127', '3674768896', '278369340', '2299092696', '1556431742', '2592342050', '81136113', '85392594', '117027784', '106850921', '106065333', '103630413', '100213201', '98906671', '59412175', '813143705909690368', '301829187', '1531585555', '61675887', '772419408', '115763615', '49706919', '366182728', '52259660', '72821719', '1278269209', '770427066', '373471064', '53093801', '16751272', '842392388219899904', '19612605', '1078525650', '36983453', '292785272', '781931599277457408', '2172461651', '3447536775', '131003811', '700784500658208768', '199361699', '2273293503', '145378963', '806233835310641152', '122151882', '54274293', '72967482', '68625841', '67007113', '947542343758090241', '763904019739906048', '26910839', '846377166489210882', '778840788327292928', '2440885206', '739227207541895169', '14128602', '3317660207', '25517926', '850126728', '18917699', '3218464527', '2359874654', '2815381772', '14216839', '99561903', '126446782', '395773073', '419133222', '37667760', '260845720', '2158075734', '851963846671704064', '24199683'))"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "for node in G.nodes():\n",
+    "    res = api.get_user(node)\n",
+    "    G.add_node(node, attr_dict = {'status_count' : res.statuses_count})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NodeDataView({'957137135785607168': {'attr_dict': {'status_count': 0}}, '23994503': {'attr_dict': {'status_count': 19129}}, '743856512': {'attr_dict': {'status_count': 6024}}, '3100117052': {'attr_dict': {'status_count': 5235}}, '39099783': {'attr_dict': {'status_count': 102120}}, '2887131725': {'attr_dict': {'status_count': 2939}}, '804464317592547328': {'attr_dict': {'status_count': 233}}, '799350189932675072': {'attr_dict': {'status_count': 341}}, '9860432': {'attr_dict': {'status_count': 45819}}, '3278180064': {'attr_dict': {'status_count': 2}}, '886362667061039105': {'attr_dict': {'status_count': 193}}, '89829880': {'attr_dict': {'status_count': 2389}}, '37320030': {'attr_dict': {'status_count': 5472}}, '31622212': {'attr_dict': {'status_count': 1344}}, '20643704': {'attr_dict': {'status_count': 4521}}, '15961241': {'attr_dict': {'status_count': 3608}}, '147494798': {'attr_dict': {'status_count': 359}}, '707175879491915776': {'attr_dict': {'status_count': 375}}, '4843180262': {'attr_dict': {'status_count': 202}}, '241240768': {'attr_dict': {'status_count': 4352}}, '58027303': {'attr_dict': {'status_count': 1114}}, '2446203199': {'attr_dict': {'status_count': 1398}}, '1317152466': {'attr_dict': {'status_count': 3574}}, '444909293': {'attr_dict': {'status_count': 9317}}, '2391206671': {'attr_dict': {'status_count': 600}}, '2453418120': {'attr_dict': {'status_count': 4706}}, '4060832015': {'attr_dict': {'status_count': 263}}, '14499004': {'attr_dict': {'status_count': 3644}}, '41352598': {'attr_dict': {'status_count': 2695}}, '384569862': {'attr_dict': {'status_count': 6192}}, '119051756': {'attr_dict': {'status_count': 20914}}, '512710201': {'attr_dict': {'status_count': 29393}}, '715324052756238336': {'attr_dict': {'status_count': 3823}}, '178203295': {'attr_dict': {'status_count': 154442}}, '3415329345': {'attr_dict': {'status_count': 2631}}, '3744250757': {'attr_dict': {'status_count': 14528}}, '32219625': {'attr_dict': {'status_count': 7813}}, '45269939': {'attr_dict': {'status_count': 1226}}, '75942425': {'attr_dict': {'status_count': 7601}}, '2207327185': {'attr_dict': {'status_count': 457}}, '344960464': {'attr_dict': {'status_count': 1471}}, '17679150': {'attr_dict': {'status_count': 15668}}, '14277681': {'attr_dict': {'status_count': 107274}}, '941784037886017536': {'attr_dict': {'status_count': 176}}, '11791512': {'attr_dict': {'status_count': 26690}}, '263547393': {'attr_dict': {'status_count': 10687}}, '24387293': {'attr_dict': {'status_count': 4318}}, '19733127': {'attr_dict': {'status_count': 99}}, '3674768896': {'attr_dict': {'status_count': 62}}, '278369340': {'attr_dict': {'status_count': 11}}, '2299092696': {'attr_dict': {'status_count': 560}}, '1556431742': {'attr_dict': {'status_count': 3474}}, '2592342050': {'attr_dict': {'status_count': 1222}}, '81136113': {'attr_dict': {'status_count': 3262}}, '85392594': {'attr_dict': {'status_count': 11735}}, '117027784': {'attr_dict': {'status_count': 30008}}, '106850921': {'attr_dict': {'status_count': 202}}, '106065333': {'attr_dict': {'status_count': 4566}}, '103630413': {'attr_dict': {'status_count': 15560}}, '100213201': {'attr_dict': {'status_count': 2914}}, '98906671': {'attr_dict': {'status_count': 19980}}, '59412175': {'attr_dict': {'status_count': 1077}}, '813143705909690368': {'attr_dict': {'status_count': 237}}, '301829187': {'attr_dict': {'status_count': 372}}, '1531585555': {'attr_dict': {'status_count': 5468}}, '61675887': {'attr_dict': {'status_count': 90828}}, '772419408': {'attr_dict': {'status_count': 2001}}, '115763615': {'attr_dict': {'status_count': 12165}}, '49706919': {'attr_dict': {'status_count': 12633}}, '366182728': {'attr_dict': {'status_count': 4173}}, '52259660': {'attr_dict': {'status_count': 113636}}, '72821719': {'attr_dict': {'status_count': 1504}}, '1278269209': {'attr_dict': {'status_count': 31098}}, '770427066': {'attr_dict': {'status_count': 2070}}, '373471064': {'attr_dict': {'status_count': 14218}}, '53093801': {'attr_dict': {'status_count': 35475}}, '16751272': {'attr_dict': {'status_count': 1400}}, '842392388219899904': {'attr_dict': {'status_count': 53}}, '19612605': {'attr_dict': {'status_count': 5323}}, '1078525650': {'attr_dict': {'status_count': 1905}}, '36983453': {'attr_dict': {'status_count': 924}}, '292785272': {'attr_dict': {'status_count': 243558}}, '781931599277457408': {'attr_dict': {'status_count': 2272}}, '2172461651': {'attr_dict': {'status_count': 4313}}, '3447536775': {'attr_dict': {'status_count': 2032}}, '131003811': {'attr_dict': {'status_count': 9444}}, '700784500658208768': {'attr_dict': {'status_count': 17640}}, '199361699': {'attr_dict': {'status_count': 149695}}, '2273293503': {'attr_dict': {'status_count': 754}}, '145378963': {'attr_dict': {'status_count': 4246}}, '806233835310641152': {'attr_dict': {'status_count': 685}}, '122151882': {'attr_dict': {'status_count': 44991}}, '54274293': {'attr_dict': {'status_count': 712}}, '72967482': {'attr_dict': {'status_count': 9709}}, '68625841': {'attr_dict': {'status_count': 61185}}, '67007113': {'attr_dict': {'status_count': 7200}}, '947542343758090241': {'attr_dict': {'status_count': 2}}, '763904019739906048': {'attr_dict': {'status_count': 9372}}, '26910839': {'attr_dict': {'status_count': 28239}}, '846377166489210882': {'attr_dict': {'status_count': 437}}, '778840788327292928': {'attr_dict': {'status_count': 251}}, '2440885206': {'attr_dict': {'status_count': 553}}, '739227207541895169': {'attr_dict': {'status_count': 595}}, '14128602': {'attr_dict': {'status_count': 73021}}, '3317660207': {'attr_dict': {'status_count': 1132}}, '25517926': {'attr_dict': {'status_count': 4245}}, '850126728': {'attr_dict': {'status_count': 4112}}, '18917699': {'attr_dict': {'status_count': 31032}}, '3218464527': {'attr_dict': {'status_count': 6642}}, '2359874654': {'attr_dict': {'status_count': 345}}, '2815381772': {'attr_dict': {'status_count': 578}}, '14216839': {'attr_dict': {'status_count': 7653}}, '99561903': {'attr_dict': {'status_count': 35303}}, '126446782': {'attr_dict': {'status_count': 17764}}, '395773073': {'attr_dict': {'status_count': 4068}}, '419133222': {'attr_dict': {'status_count': 7408}}, '37667760': {'attr_dict': {'status_count': 3329}}, '260845720': {'attr_dict': {'status_count': 35236}}, '2158075734': {'attr_dict': {'status_count': 1035}}, '851963846671704064': {'attr_dict': {'status_count': 4369}}, '24199683': {'attr_dict': {'status_count': 30191}}})"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "G.nodes(data=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def saveGraph(G, filename):\n",
+    "    data = json_graph.node_link_data(G)\n",
+    "    json_data = json.dumps(data)\n",
+    "    with open(filename, 'w') as file:\n",
+    "        file.write(json_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saveGraph(G, 'friendGraph.json')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NodeDataView({'957137135785607168': {'attr_dict': {'status_count': 0}}, '23994503': {'attr_dict': {'status_count': 19129}}, '743856512': {'attr_dict': {'status_count': 6024}}, '3100117052': {'attr_dict': {'status_count': 5235}}, '39099783': {'attr_dict': {'status_count': 102120}}, '2887131725': {'attr_dict': {'status_count': 2939}}, '804464317592547328': {'attr_dict': {'status_count': 233}}, '799350189932675072': {'attr_dict': {'status_count': 341}}, '9860432': {'attr_dict': {'status_count': 45819}}, '3278180064': {'attr_dict': {'status_count': 2}}, '886362667061039105': {'attr_dict': {'status_count': 193}}, '89829880': {'attr_dict': {'status_count': 2389}}, '37320030': {'attr_dict': {'status_count': 5472}}, '31622212': {'attr_dict': {'status_count': 1344}}, '20643704': {'attr_dict': {'status_count': 4521}}, '15961241': {'attr_dict': {'status_count': 3608}}, '147494798': {'attr_dict': {'status_count': 359}}, '707175879491915776': {'attr_dict': {'status_count': 375}}, '4843180262': {'attr_dict': {'status_count': 202}}, '241240768': {'attr_dict': {'status_count': 4352}}, '58027303': {'attr_dict': {'status_count': 1114}}, '2446203199': {'attr_dict': {'status_count': 1398}}, '1317152466': {'attr_dict': {'status_count': 3574}}, '444909293': {'attr_dict': {'status_count': 9317}}, '2391206671': {'attr_dict': {'status_count': 600}}, '2453418120': {'attr_dict': {'status_count': 4706}}, '4060832015': {'attr_dict': {'status_count': 263}}, '14499004': {'attr_dict': {'status_count': 3644}}, '41352598': {'attr_dict': {'status_count': 2695}}, '384569862': {'attr_dict': {'status_count': 6192}}, '119051756': {'attr_dict': {'status_count': 20914}}, '512710201': {'attr_dict': {'status_count': 29393}}, '715324052756238336': {'attr_dict': {'status_count': 3823}}, '178203295': {'attr_dict': {'status_count': 154442}}, '3415329345': {'attr_dict': {'status_count': 2631}}, '3744250757': {'attr_dict': {'status_count': 14528}}, '32219625': {'attr_dict': {'status_count': 7813}}, '45269939': {'attr_dict': {'status_count': 1226}}, '75942425': {'attr_dict': {'status_count': 7601}}, '2207327185': {'attr_dict': {'status_count': 457}}, '344960464': {'attr_dict': {'status_count': 1471}}, '17679150': {'attr_dict': {'status_count': 15668}}, '14277681': {'attr_dict': {'status_count': 107274}}, '941784037886017536': {'attr_dict': {'status_count': 176}}, '11791512': {'attr_dict': {'status_count': 26690}}, '263547393': {'attr_dict': {'status_count': 10687}}, '24387293': {'attr_dict': {'status_count': 4318}}, '19733127': {'attr_dict': {'status_count': 99}}, '3674768896': {'attr_dict': {'status_count': 62}}, '278369340': {'attr_dict': {'status_count': 11}}, '2299092696': {'attr_dict': {'status_count': 560}}, '1556431742': {'attr_dict': {'status_count': 3474}}, '2592342050': {'attr_dict': {'status_count': 1222}}, '81136113': {'attr_dict': {'status_count': 3262}}, '85392594': {'attr_dict': {'status_count': 11735}}, '117027784': {'attr_dict': {'status_count': 30008}}, '106850921': {'attr_dict': {'status_count': 202}}, '106065333': {'attr_dict': {'status_count': 4566}}, '103630413': {'attr_dict': {'status_count': 15560}}, '100213201': {'attr_dict': {'status_count': 2914}}, '98906671': {'attr_dict': {'status_count': 19980}}, '59412175': {'attr_dict': {'status_count': 1077}}, '813143705909690368': {'attr_dict': {'status_count': 237}}, '301829187': {'attr_dict': {'status_count': 372}}, '1531585555': {'attr_dict': {'status_count': 5468}}, '61675887': {'attr_dict': {'status_count': 90828}}, '772419408': {'attr_dict': {'status_count': 2001}}, '115763615': {'attr_dict': {'status_count': 12165}}, '49706919': {'attr_dict': {'status_count': 12633}}, '366182728': {'attr_dict': {'status_count': 4173}}, '52259660': {'attr_dict': {'status_count': 113636}}, '72821719': {'attr_dict': {'status_count': 1504}}, '1278269209': {'attr_dict': {'status_count': 31098}}, '770427066': {'attr_dict': {'status_count': 2070}}, '373471064': {'attr_dict': {'status_count': 14218}}, '53093801': {'attr_dict': {'status_count': 35475}}, '16751272': {'attr_dict': {'status_count': 1400}}, '842392388219899904': {'attr_dict': {'status_count': 53}}, '19612605': {'attr_dict': {'status_count': 5323}}, '1078525650': {'attr_dict': {'status_count': 1905}}, '36983453': {'attr_dict': {'status_count': 924}}, '292785272': {'attr_dict': {'status_count': 243558}}, '781931599277457408': {'attr_dict': {'status_count': 2272}}, '2172461651': {'attr_dict': {'status_count': 4313}}, '3447536775': {'attr_dict': {'status_count': 2032}}, '131003811': {'attr_dict': {'status_count': 9444}}, '700784500658208768': {'attr_dict': {'status_count': 17640}}, '199361699': {'attr_dict': {'status_count': 149695}}, '2273293503': {'attr_dict': {'status_count': 754}}, '145378963': {'attr_dict': {'status_count': 4246}}, '806233835310641152': {'attr_dict': {'status_count': 685}}, '122151882': {'attr_dict': {'status_count': 44991}}, '54274293': {'attr_dict': {'status_count': 712}}, '72967482': {'attr_dict': {'status_count': 9709}}, '68625841': {'attr_dict': {'status_count': 61185}}, '67007113': {'attr_dict': {'status_count': 7200}}, '947542343758090241': {'attr_dict': {'status_count': 2}}, '763904019739906048': {'attr_dict': {'status_count': 9372}}, '26910839': {'attr_dict': {'status_count': 28239}}, '846377166489210882': {'attr_dict': {'status_count': 437}}, '778840788327292928': {'attr_dict': {'status_count': 251}}, '2440885206': {'attr_dict': {'status_count': 553}}, '739227207541895169': {'attr_dict': {'status_count': 595}}, '14128602': {'attr_dict': {'status_count': 73021}}, '3317660207': {'attr_dict': {'status_count': 1132}}, '25517926': {'attr_dict': {'status_count': 4245}}, '850126728': {'attr_dict': {'status_count': 4112}}, '18917699': {'attr_dict': {'status_count': 31032}}, '3218464527': {'attr_dict': {'status_count': 6642}}, '2359874654': {'attr_dict': {'status_count': 345}}, '2815381772': {'attr_dict': {'status_count': 578}}, '14216839': {'attr_dict': {'status_count': 7653}}, '99561903': {'attr_dict': {'status_count': 35303}}, '126446782': {'attr_dict': {'status_count': 17764}}, '395773073': {'attr_dict': {'status_count': 4068}}, '419133222': {'attr_dict': {'status_count': 7408}}, '37667760': {'attr_dict': {'status_count': 3329}}, '260845720': {'attr_dict': {'status_count': 35236}}, '2158075734': {'attr_dict': {'status_count': 1035}}, '851963846671704064': {'attr_dict': {'status_count': 4369}}, '24199683': {'attr_dict': {'status_count': 30191}}})"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with open(\"friendGraph.json\", 'r') as file:\n",
+    "    json_data = file.read()\n",
+    "    data2 = json.loads(json_data)\n",
+    "G = json_graph.node_link_graph(data2)\n",
+    "G.nodes(data=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -181,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
