--- a/playground/TwitterGraph2.ipynb
+++ b/playground/TwitterGraph2.ipynb
@@ -2,26 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import tweepy\n",
     "import networkx as nx\n",
     "import pandas as pd\n",
-    "import json \n",
+    "import json\n",
+    "import numpy as np\n",
     "from networkx.readwrite import json_graph\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "consumer_key = \"2e6dNamYAUwvPcLJ5YKn9ow6R\"\n",
@@ -266,34 +264,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"friendGraph.json\", 'r') as file:\n",
+    "    json_data = file.read()\n",
+    "    data2 = json.loads(json_data)\n",
+    "G = json_graph.node_link_graph(data2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getProbabMatrix(G, center_nodes = []):\n",
+    "    probab_matrix = []\n",
+    "    node_array = [node for center_node in center_nodes for (node, self) in G.in_edges(center_node)]\n",
+    "    node_array = node_array + center_nodes\n",
+    "    node_array = list(set(node_array))\n",
+    "    print(node_array)\n",
+    "    for node1 in node_array:\n",
+    "        if len(G.edges(node1)) == 0:\n",
+    "            probab_matrix.append([0 for a in range(0, len(node_array))])\n",
+    "            continue\n",
+    "        neighSum = 0\n",
+    "        for (self, neighbor) in G.edges(node1):\n",
+    "            neighSum = neighSum + G.node[neighbor]['attr_dict']['status_count']\n",
+    "        probab_vector = []\n",
+    "        for node2 in node_array:\n",
+    "            if G.has_edge(node1, node2):\n",
+    "                score = G.node[node2]['attr_dict']['status_count'] / neighSum\n",
+    "            else:\n",
+    "                score = 0\n",
+    "            probab_vector.append(score)\n",
+    "        probab_matrix.append(probab_vector)\n",
+    "    return np.array(probab_matrix), node_array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['804464317592547328', '2887131725', '9860432', '81136113', '3278180064', '39099783', '743856512', '23994503', '799350189932675072', '3100117052', '957137135785607168', '886362667061039105']\n"
+     ]
+    }
+   ],
+   "source": [
+    "probab_matrix, node_array = getProbabMatrix(G, ['23994503', '81136113'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "NodeDataView({'957137135785607168': {'attr_dict': {'status_count': 0}}, '23994503': {'attr_dict': {'status_count': 19129}}, '743856512': {'attr_dict': {'status_count': 6024}}, '3100117052': {'attr_dict': {'status_count': 5235}}, '39099783': {'attr_dict': {'status_count': 102120}}, '2887131725': {'attr_dict': {'status_count': 2939}}, '804464317592547328': {'attr_dict': {'status_count': 233}}, '799350189932675072': {'attr_dict': {'status_count': 341}}, '9860432': {'attr_dict': {'status_count': 45819}}, '3278180064': {'attr_dict': {'status_count': 2}}, '886362667061039105': {'attr_dict': {'status_count': 193}}, '89829880': {'attr_dict': {'status_count': 2389}}, '37320030': {'attr_dict': {'status_count': 5472}}, '31622212': {'attr_dict': {'status_count': 1344}}, '20643704': {'attr_dict': {'status_count': 4521}}, '15961241': {'attr_dict': {'status_count': 3608}}, '147494798': {'attr_dict': {'status_count': 359}}, '707175879491915776': {'attr_dict': {'status_count': 375}}, '4843180262': {'attr_dict': {'status_count': 202}}, '241240768': {'attr_dict': {'status_count': 4352}}, '58027303': {'attr_dict': {'status_count': 1114}}, '2446203199': {'attr_dict': {'status_count': 1398}}, '1317152466': {'attr_dict': {'status_count': 3574}}, '444909293': {'attr_dict': {'status_count': 9317}}, '2391206671': {'attr_dict': {'status_count': 600}}, '2453418120': {'attr_dict': {'status_count': 4706}}, '4060832015': {'attr_dict': {'status_count': 263}}, '14499004': {'attr_dict': {'status_count': 3644}}, '41352598': {'attr_dict': {'status_count': 2695}}, '384569862': {'attr_dict': {'status_count': 6192}}, '119051756': {'attr_dict': {'status_count': 20914}}, '512710201': {'attr_dict': {'status_count': 29393}}, '715324052756238336': {'attr_dict': {'status_count': 3823}}, '178203295': {'attr_dict': {'status_count': 154442}}, '3415329345': {'attr_dict': {'status_count': 2631}}, '3744250757': {'attr_dict': {'status_count': 14528}}, '32219625': {'attr_dict': {'status_count': 7813}}, '45269939': {'attr_dict': {'status_count': 1226}}, '75942425': {'attr_dict': {'status_count': 7601}}, '2207327185': {'attr_dict': {'status_count': 457}}, '344960464': {'attr_dict': {'status_count': 1471}}, '17679150': {'attr_dict': {'status_count': 15668}}, '14277681': {'attr_dict': {'status_count': 107274}}, '941784037886017536': {'attr_dict': {'status_count': 176}}, '11791512': {'attr_dict': {'status_count': 26690}}, '263547393': {'attr_dict': {'status_count': 10687}}, '24387293': {'attr_dict': {'status_count': 4318}}, '19733127': {'attr_dict': {'status_count': 99}}, '3674768896': {'attr_dict': {'status_count': 62}}, '278369340': {'attr_dict': {'status_count': 11}}, '2299092696': {'attr_dict': {'status_count': 560}}, '1556431742': {'attr_dict': {'status_count': 3474}}, '2592342050': {'attr_dict': {'status_count': 1222}}, '81136113': {'attr_dict': {'status_count': 3262}}, '85392594': {'attr_dict': {'status_count': 11735}}, '117027784': {'attr_dict': {'status_count': 30008}}, '106850921': {'attr_dict': {'status_count': 202}}, '106065333': {'attr_dict': {'status_count': 4566}}, '103630413': {'attr_dict': {'status_count': 15560}}, '100213201': {'attr_dict': {'status_count': 2914}}, '98906671': {'attr_dict': {'status_count': 19980}}, '59412175': {'attr_dict': {'status_count': 1077}}, '813143705909690368': {'attr_dict': {'status_count': 237}}, '301829187': {'attr_dict': {'status_count': 372}}, '1531585555': {'attr_dict': {'status_count': 5468}}, '61675887': {'attr_dict': {'status_count': 90828}}, '772419408': {'attr_dict': {'status_count': 2001}}, '115763615': {'attr_dict': {'status_count': 12165}}, '49706919': {'attr_dict': {'status_count': 12633}}, '366182728': {'attr_dict': {'status_count': 4173}}, '52259660': {'attr_dict': {'status_count': 113636}}, '72821719': {'attr_dict': {'status_count': 1504}}, '1278269209': {'attr_dict': {'status_count': 31098}}, '770427066': {'attr_dict': {'status_count': 2070}}, '373471064': {'attr_dict': {'status_count': 14218}}, '53093801': {'attr_dict': {'status_count': 35475}}, '16751272': {'attr_dict': {'status_count': 1400}}, '842392388219899904': {'attr_dict': {'status_count': 53}}, '19612605': {'attr_dict': {'status_count': 5323}}, '1078525650': {'attr_dict': {'status_count': 1905}}, '36983453': {'attr_dict': {'status_count': 924}}, '292785272': {'attr_dict': {'status_count': 243558}}, '781931599277457408': {'attr_dict': {'status_count': 2272}}, '2172461651': {'attr_dict': {'status_count': 4313}}, '3447536775': {'attr_dict': {'status_count': 2032}}, '131003811': {'attr_dict': {'status_count': 9444}}, '700784500658208768': {'attr_dict': {'status_count': 17640}}, '199361699': {'attr_dict': {'status_count': 149695}}, '2273293503': {'attr_dict': {'status_count': 754}}, '145378963': {'attr_dict': {'status_count': 4246}}, '806233835310641152': {'attr_dict': {'status_count': 685}}, '122151882': {'attr_dict': {'status_count': 44991}}, '54274293': {'attr_dict': {'status_count': 712}}, '72967482': {'attr_dict': {'status_count': 9709}}, '68625841': {'attr_dict': {'status_count': 61185}}, '67007113': {'attr_dict': {'status_count': 7200}}, '947542343758090241': {'attr_dict': {'status_count': 2}}, '763904019739906048': {'attr_dict': {'status_count': 9372}}, '26910839': {'attr_dict': {'status_count': 28239}}, '846377166489210882': {'attr_dict': {'status_count': 437}}, '778840788327292928': {'attr_dict': {'status_count': 251}}, '2440885206': {'attr_dict': {'status_count': 553}}, '739227207541895169': {'attr_dict': {'status_count': 595}}, '14128602': {'attr_dict': {'status_count': 73021}}, '3317660207': {'attr_dict': {'status_count': 1132}}, '25517926': {'attr_dict': {'status_count': 4245}}, '850126728': {'attr_dict': {'status_count': 4112}}, '18917699': {'attr_dict': {'status_count': 31032}}, '3218464527': {'attr_dict': {'status_count': 6642}}, '2359874654': {'attr_dict': {'status_count': 345}}, '2815381772': {'attr_dict': {'status_count': 578}}, '14216839': {'attr_dict': {'status_count': 7653}}, '99561903': {'attr_dict': {'status_count': 35303}}, '126446782': {'attr_dict': {'status_count': 17764}}, '395773073': {'attr_dict': {'status_count': 4068}}, '419133222': {'attr_dict': {'status_count': 7408}}, '37667760': {'attr_dict': {'status_count': 3329}}, '260845720': {'attr_dict': {'status_count': 35236}}, '2158075734': {'attr_dict': {'status_count': 1035}}, '851963846671704064': {'attr_dict': {'status_count': 4369}}, '24199683': {'attr_dict': {'status_count': 30191}}})"
+       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.04739213,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.50744091,  0.08541791,  0.79114107,  0.        ,  0.27791661,\n",
+       "         0.36203797,  0.74924601,  0.        ,  0.10649468,  0.49398306,\n",
+       "         0.52461399,  0.3067954 ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(\"friendGraph.json\", 'r') as file:\n",
-    "    json_data = file.read()\n",
-    "    data2 = json.loads(json_data)\n",
-    "G = json_graph.node_link_graph(data2)\n",
-    "G.nodes(data=True)"
+    "probab_matrix.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.random.seed(42)\n",
+    "\n",
+    "def compute_rank(probab_matrix, node_array, iterations=100, gamma=0.5):\n",
+    "    rank_vector = np.array([1 for a in node_array])\n",
+    "    for i in range(1, 2):\n",
+    "        rank_vector = gamma * np.dot(probab_matrix.T, rank_vector)\n",
+    "    return rank_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.02369606,  0.        ,\n",
+       "        0.        ,  0.        ,  2.10254381,  0.        ,  0.        ,\n",
+       "        0.        ,  0.        ])"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_rank(probab_matrix, node_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "43"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node_array.index('23994503')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -314,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
