--- a/playground/Constructing topic matrix.ipynb
+++ b/playground/Constructing topic matrix.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Run this\n",
@@ -31,9 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function to preprocess the text - RUN this\n",
@@ -117,9 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Function to save the graph - RUN this\n",
@@ -146,7 +140,6 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {
     "scrolled": true
    },
@@ -209,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -220,16 +213,16 @@
      "text": [
       "\n",
       "LDA: \n",
-      "(0, '0.072*\"rt\" + 0.049*\"startingisbelieving\" + 0.042*\"ad\" + 0.038*\"plan\" + 0.034*\"college\" + 0.019*\"university\" + 0.019*\"child\" + 0.015*\"family\" + 0.015*\"florida\" + 0.015*\"best\"')\n",
-      "(1, '0.036*\"college\" + 0.020*\"rt\" + 0.018*\"plan\" + 0.018*\"allow\" + 0.018*\"budget\" + 0.018*\"future\" + 0.018*\"meet\" + 0.018*\"cost\" + 0.018*\"back\" + 0.018*\"increment\"')\n",
-      "(2, '0.036*\"year\" + 0.018*\"rt\" + 0.018*\"startingisbelieving\" + 0.018*\"best\" + 0.010*\"college\" + 0.010*\"many\" + 0.010*\"parent\" + 0.010*\"day\" + 0.010*\"cold\" + 0.010*\"starting\"')\n",
-      "(3, '0.031*\"life\" + 0.021*\"rt\" + 0.021*\"degree\" + 0.021*\"side\" + 0.021*\"cup\" + 0.021*\"coffee\" + 0.011*\"startingisbelieving\" + 0.011*\"college\" + 0.011*\"year\" + 0.011*\"want\"')\n",
-      "(4, '0.030*\"college\" + 0.021*\"rt\" + 0.017*\"startingisbelieving\" + 0.017*\"florida\" + 0.017*\"work\" + 0.014*\"love\" + 0.010*\"little\" + 0.009*\"ad\" + 0.009*\"plan\" + 0.009*\"best\"')\n",
-      "(5, '0.062*\"prize\" + 0.052*\"rt\" + 0.045*\"startingisbelieving\" + 0.035*\"ad\" + 0.031*\"backpack\" + 0.031*\"p\" + 0.031*\"pack\" + 0.021*\"biscuit\" + 0.011*\"homemade\" + 0.011*\"instagood\"')\n",
-      "(6, '0.030*\"rt\" + 0.021*\"new\" + 0.017*\"year\" + 0.016*\"education\" + 0.012*\"right\" + 0.012*\"love\" + 0.012*\"watching\" + 0.012*\"essential\" + 0.012*\"learned\" + 0.010*\"startingisbelieving\"')\n",
-      "(7, '0.030*\"rt\" + 0.030*\"family\" + 0.030*\"startingisbelieving\" + 0.020*\"college\" + 0.020*\"florida\" + 0.020*\"ad\" + 0.020*\"goal\" + 0.020*\"new\" + 0.011*\"plan\" + 0.011*\"attend\"')\n",
-      "(8, '0.044*\"rt\" + 0.028*\"startingisbelieving\" + 0.019*\"ad\" + 0.019*\"start\" + 0.018*\"november\" + 0.010*\"college\" + 0.010*\"year\" + 0.010*\"plan\" + 0.010*\"holy\" + 0.010*\"mom\"')\n",
-      "(9, '0.046*\"rt\" + 0.025*\"college\" + 0.017*\"go\" + 0.017*\"tofwseries\" + 0.017*\"mom\" + 0.017*\"parent\" + 0.012*\"get\" + 0.012*\"child\" + 0.011*\"watch\" + 0.011*\"starting\"')\n"
+      "(0, '0.024*\"education\" + 0.016*\"college\" + 0.016*\"thanksgiving\" + 0.016*\"gift\" + 0.016*\"give\" + 0.016*\"instagood\" + 0.016*\"biscuit\" + 0.016*\"morning\" + 0.009*\"rt\" + 0.009*\"startingisbelieving\"')\n",
+      "(1, '0.030*\"best\" + 0.023*\"love\" + 0.020*\"year\" + 0.016*\"rt\" + 0.016*\"know\" + 0.016*\"comparison\" + 0.016*\"read\" + 0.016*\"need\" + 0.016*\"review\" + 0.016*\"looking\"')\n",
+      "(2, '0.074*\"rt\" + 0.050*\"startingisbelieving\" + 0.047*\"college\" + 0.031*\"ad\" + 0.016*\"plan\" + 0.016*\"went\" + 0.016*\"child\" + 0.012*\"fl\" + 0.012*\"parent\" + 0.012*\"start\"')\n",
+      "(3, '0.059*\"rt\" + 0.030*\"college\" + 0.030*\"degree\" + 0.020*\"startingisbelieving\" + 0.020*\"plan\" + 0.020*\"ad\" + 0.020*\"many\" + 0.020*\"student\" + 0.011*\"year\" + 0.011*\"family\"')\n",
+      "(4, '0.022*\"rt\" + 0.022*\"back\" + 0.022*\"side\" + 0.019*\"amp\" + 0.012*\"plan\" + 0.012*\"year\" + 0.012*\"child\" + 0.012*\"p\" + 0.012*\"essential\" + 0.012*\"friend\"')\n",
+      "(5, '0.046*\"startingisbelieving\" + 0.046*\"ad\" + 0.040*\"rt\" + 0.035*\"prize\" + 0.023*\"new\" + 0.023*\"goal\" + 0.018*\"tofwseries\" + 0.018*\"kid\" + 0.018*\"plan\" + 0.018*\"education\"')\n",
+      "(6, '0.028*\"rt\" + 0.028*\"three\" + 0.015*\"college\" + 0.015*\"best\" + 0.015*\"life\" + 0.015*\"ever\" + 0.015*\"feeling\" + 0.015*\"one\" + 0.015*\"starti\" + 0.015*\"paying\"')\n",
+      "(7, '0.035*\"rt\" + 0.035*\"prize\" + 0.019*\"startingisbelieving\" + 0.018*\"ad\" + 0.018*\"essential\" + 0.018*\"pack\" + 0.011*\"care\" + 0.009*\"backpack\" + 0.009*\"family\" + 0.009*\"like\"')\n",
+      "(8, '0.042*\"rt\" + 0.035*\"college\" + 0.028*\"florida\" + 0.028*\"university\" + 0.021*\"plan\" + 0.021*\"p\" + 0.021*\"family\" + 0.014*\"used\" + 0.014*\"startin\" + 0.014*\"false\"')\n",
+      "(9, '0.034*\"rt\" + 0.020*\"really\" + 0.020*\"college\" + 0.019*\"startingisbelieving\" + 0.014*\"year\" + 0.014*\"november\" + 0.014*\"plan\" + 0.014*\"hope\" + 0.013*\"want\" + 0.007*\"mom\"')\n"
      ]
     }
    ],
@@ -275,37 +268,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 138,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# RUN this to calc similarity\n",
     "\n",
     "def calcSimilarity(ldamodel, nodeId):\n",
-    "    \n",
     "    doc = [item for sublist in G.node[nodeId]['attr_dict']['tweet_doc'] for item in sublist]\n",
-    "\n",
-    "    preprocessed = preprocess(doc)\n",
-    "\n",
-    "    follower_dictionary = corpora.Dictionary(preprocessed)\n",
-    "\n",
-    "    follower_bow = [follower_dictionary.doc2bow(text) for text in preprocessed]\n",
-    "\n",
+    "    preprocessed = np.array([[word for item in preprocess(doc) for word in item]])\n",
+    "    follower_bow = [dictionary.doc2bow(text) for text in preprocessed]\n",
     "    for topic in ldamodel[follower_bow]:\n",
+    "        topicIndices = [a for (a, b) in topic]\n",
+    "        absentTopics = [i for i in range(0, 10) if i not in topicIndices]\n",
+    "        for topicIndex in absentTopics:\n",
+    "            G.node[nodeId]['attr_dict']['similarity'][topicIndex] = 0\n",
     "        for (a, b) in topic:\n",
     "            G.node[nodeId]['attr_dict']['similarity'][a] = b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 134,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3100117052\n",
+      "\n",
+      "[0, 1, 3]\n"
+     ]
+    }
+   ],
    "source": [
     "# for (node, self) in G.nodes(data=True):\n",
     "#     try:\n",
@@ -313,7 +311,7 @@
     "#     except:\n",
     "#         continue\n",
     "\n",
-    "# calcSimilarity(ldamodel, '23994503')"
+    "calcSimilarity(ldamodel, '3100117052')"
    ]
   },
   {
@@ -338,16 +336,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 139,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# RUN the cells below to get the rank\n",
     "\n",
     "def getProbabMatrix(G, center_nodes = []):\n",
     "    probab_matrix = []\n",
+    "    for node in center_nodes:\n",
+    "        calcSimilarity(ldamodel, node)\n",
     "    node_array = [node for center_node in center_nodes for (node, self) in G.in_edges(center_node)]\n",
     "    node_array = node_array + center_nodes\n",
     "    node_array = list(set(node_array))\n",
@@ -362,11 +360,10 @@
     "        probab_vector = []\n",
     "        for node2 in node_array:\n",
     "            if G.has_edge(node1, node2):\n",
-    "                print(node2)\n",
     "                try:\n",
     "                    calcSimilarity(ldamodel, node1)\n",
     "                except:\n",
-    "                    continue    \n",
+    "                    continue\n",
     "                score = G.node[node2]['attr_dict']['status_count'] / neighSum * (1 - abs(G.node[node1]['attr_dict']['similarity'][0] - G.node[node2]['attr_dict']['similarity'][0]))\n",
     "            else:\n",
     "                score = 0\n",
@@ -377,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 140,
    "metadata": {
     "scrolled": true
    },
@@ -386,17 +383,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['743856512', '957137135785607168', '3278180064', '886362667061039105', '804464317592547328', '2887131725', '799350189932675072', '3100117052', '9860432', '23994503', '39099783']\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n",
-      "23994503\n"
+      "['2887131725', '804464317592547328', '957137135785607168', '743856512', '3278180064', '23994503', '9860432', '39099783', '3100117052', '886362667061039105', '799350189932675072']\n"
      ]
     }
    ],
@@ -406,26 +393,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0.27791624376903473, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0.50743564386121864, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0.085417027041775423, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0.10649357249942301, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0.4939829694299962, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]),\n",
-       "       list([0, 0, 0, 0, 0, 0, 0, 0, 0, 0])], dtype=object)"
+       "array([[ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.08113603,  0.42055852,  0.5161679 ,  0.70142136,  0.25856954,\n",
+       "         0.        ,  0.73182522,  0.33641903,  0.45253769,  0.30231951,\n",
+       "         0.0882245 ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "         0.        ]])"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,10 +445,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 146,
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(42)\n",
@@ -453,20 +460,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can't multiply sequence by non-int of type 'float'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-44-7a6b24169fdd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcompute_rank\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprobab_matrix\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnode_array\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-43-2fa8844ef9c7>\u001b[0m in \u001b[0;36mcompute_rank\u001b[1;34m(probab_matrix, node_array, iterations, gamma)\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mrank_vector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0ma\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mnode_array\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m         \u001b[0mrank_vector\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgamma\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprobab_matrix\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrank_vector\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mrank_vector\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can't multiply sequence by non-int of type 'float'"
-     ]
+     "data": {
+      "text/plain": [
+       "array([ 0.        ,  0.        ,  0.        ,  0.        ,  0.        ,\n",
+       "        1.94458966,  0.        ,  0.        ,  0.        ,  0.        ,  0.        ])"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -552,7 +558,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
