--- a/playground/Constructing topic matrix.ipynb
+++ b/playground/Constructing topic matrix.ipynb
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -212,16 +212,16 @@
      "text": [
       "\n",
       "LDA: \n",
-      "(0, '0.047*\"rt\" + 0.030*\"college\" + 0.023*\"startingisbelieving\" + 0.019*\"family\" + 0.018*\"plan\" + 0.018*\"life\" + 0.012*\"best\" + 0.012*\"daughter\" + 0.012*\"year\" + 0.012*\"ever\"')\n",
-      "(1, '0.039*\"rt\" + 0.021*\"college\" + 0.019*\"student\" + 0.019*\"degree\" + 0.014*\"year\" + 0.013*\"startingisbelieving\" + 0.013*\"went\" + 0.013*\"fl\" + 0.013*\"money\" + 0.013*\"wish\"')\n",
-      "(2, '0.036*\"rt\" + 0.024*\"year\" + 0.017*\"side\" + 0.010*\"tofwseries\" + 0.009*\"plan\" + 0.009*\"child\" + 0.009*\"startingisbelieving\" + 0.009*\"ad\" + 0.009*\"family\" + 0.009*\"help\"')\n",
-      "(3, '0.029*\"rt\" + 0.020*\"back\" + 0.020*\"family\" + 0.020*\"know\" + 0.020*\"went\" + 0.010*\"startingisbelieving\" + 0.010*\"parent\" + 0.010*\"year\" + 0.010*\"right\" + 0.010*\"ad\"')\n",
-      "(4, '0.048*\"rt\" + 0.026*\"college\" + 0.021*\"love\" + 0.020*\"child\" + 0.013*\"little\" + 0.013*\"startingisbelieving\" + 0.013*\"ad\" + 0.013*\"plan\" + 0.013*\"p\" + 0.013*\"prize\"')\n",
-      "(5, '0.071*\"rt\" + 0.056*\"startingisbelieving\" + 0.048*\"ad\" + 0.026*\"prize\" + 0.023*\"college\" + 0.023*\"education\" + 0.019*\"plan\" + 0.015*\"new\" + 0.015*\"goal\" + 0.015*\"university\"')\n",
-      "(6, '0.039*\"college\" + 0.016*\"rt\" + 0.016*\"startingisbelieving\" + 0.016*\"year\" + 0.016*\"look\" + 0.016*\"november\" + 0.010*\"word\" + 0.008*\"plan\" + 0.008*\"want\" + 0.008*\"enter\"')\n",
-      "(7, '0.021*\"plan\" + 0.020*\"florida\" + 0.019*\"rt\" + 0.019*\"college\" + 0.011*\"startingisbelieving\" + 0.011*\"ad\" + 0.011*\"best\" + 0.011*\"read\" + 0.011*\"essential\" + 0.011*\"review\"')\n",
-      "(8, '0.046*\"startingisbelieving\" + 0.032*\"rt\" + 0.017*\"family\" + 0.017*\"mom\" + 0.016*\"ad\" + 0.016*\"plan\" + 0.016*\"florida\" + 0.016*\"p\" + 0.016*\"many\" + 0.016*\"need\"')\n",
-      "(9, '0.036*\"best\" + 0.024*\"comparison\" + 0.024*\"looking\" + 0.024*\"read\" + 0.024*\"review\" + 0.013*\"startingisbelieving\" + 0.013*\"know\" + 0.013*\"day\" + 0.013*\"kid\" + 0.013*\"florida\"')\n"
+      "(0, '0.057*\"rt\" + 0.046*\"college\" + 0.035*\"startingisbelieving\" + 0.023*\"plan\" + 0.018*\"ad\" + 0.018*\"family\" + 0.018*\"budget\" + 0.012*\"increment\" + 0.012*\"cost\" + 0.012*\"prepay\"')\n",
+      "(1, '0.031*\"rt\" + 0.031*\"little\" + 0.016*\"college\" + 0.016*\"make\" + 0.016*\"love\" + 0.016*\"sta\" + 0.016*\"guy\" + 0.016*\"w\" + 0.016*\"one\" + 0.016*\"anymore\"')\n",
+      "(2, '0.020*\"rt\" + 0.020*\"college\" + 0.020*\"money\" + 0.020*\"holy\" + 0.020*\"merrychristmas\" + 0.010*\"startingisbelieving\" + 0.010*\"plan\" + 0.010*\"florida\" + 0.010*\"year\" + 0.010*\"p\"')\n",
+      "(3, '0.043*\"startingisbelieving\" + 0.039*\"new\" + 0.031*\"rt\" + 0.028*\"year\" + 0.025*\"goal\" + 0.019*\"ad\" + 0.013*\"make\" + 0.013*\"education\" + 0.013*\"kid\" + 0.013*\"end\"')\n",
+      "(4, '0.026*\"tofwseries\" + 0.025*\"best\" + 0.018*\"watch\" + 0.018*\"go\" + 0.018*\"november\" + 0.016*\"looking\" + 0.016*\"review\" + 0.016*\"comparison\" + 0.015*\"oil\" + 0.015*\"read\"')\n",
+      "(5, '0.023*\"rt\" + 0.023*\"student\" + 0.023*\"prize\" + 0.023*\"essential\" + 0.012*\"college\" + 0.012*\"want\" + 0.012*\"daughter\" + 0.012*\"stunt\" + 0.012*\"w\" + 0.012*\"pack\"')\n",
+      "(6, '0.046*\"rt\" + 0.032*\"college\" + 0.024*\"startingisbelieving\" + 0.024*\"year\" + 0.016*\"education\" + 0.016*\"ad\" + 0.016*\"think\" + 0.016*\"one\" + 0.009*\"plan\" + 0.009*\"child\"')\n",
+      "(7, '0.052*\"rt\" + 0.031*\"college\" + 0.026*\"ad\" + 0.021*\"know\" + 0.021*\"startingisbelieving\" + 0.016*\"fl\" + 0.016*\"went\" + 0.016*\"university\" + 0.016*\"child\" + 0.016*\"plan\"')\n",
+      "(8, '0.046*\"rt\" + 0.029*\"startingisbelieving\" + 0.023*\"plan\" + 0.018*\"ad\" + 0.018*\"college\" + 0.018*\"family\" + 0.018*\"mom\" + 0.012*\"best\" + 0.012*\"university\" + 0.012*\"wish\"')\n",
+      "(9, '0.053*\"rt\" + 0.040*\"startingisbelieving\" + 0.040*\"prize\" + 0.040*\"p\" + 0.033*\"ad\" + 0.020*\"florida\" + 0.020*\"pack\" + 0.020*\"backpack\" + 0.014*\"plan\" + 0.014*\"many\"')\n"
      ]
     }
    ],
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,8 +278,10 @@
     "    preprocessed = np.array([[word for item in preprocess(doc) for word in item]])\n",
     "    follower_bow = [dictionary.doc2bow(text) for text in preprocessed]\n",
     "    for topic in ldamodel[follower_bow]:\n",
+    "        print(topic)\n",
     "        topicIndices = [a for (a, b) in topic]\n",
     "        absentTopics = [i for i in range(0, 10) if i not in topicIndices]\n",
+    "        print(absentTopics)\n",
     "        for topicIndex in absentTopics:\n",
     "            G.node[nodeId]['attr_dict']['similarity'][topicIndex] = 0\n",
     "        for (a, b) in topic:\n",
@@ -288,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -297,9 +299,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3100117052\n",
-      "\n",
-      "[0, 1, 3]\n"
+      "[(0, 0.14591108), (1, 0.012220274), (2, 0.055512123), (3, 0.13470519), (4, 0.077931695), (5, 0.039396387), (6, 0.082198843), (7, 0.17751038), (8, 0.15228082), (9, 0.12233321)]\n",
+      "[]\n"
      ]
     }
    ],
@@ -310,7 +311,7 @@
     "#     except:\n",
     "#         continue\n",
     "\n",
-    "calcSimilarity(ldamodel, '3100117052')"
+    "calcSimilarity(ldamodel, '23994503')"
    ]
   },
   {
